<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="feature_text_1">Track Attendance Percentage</string>
    <string name="feature_text_2">Never Miss Important Lectures</string>
    <string name="feature_text_3">Extract time to enjoy</string>
    <string name="setup_timetable">Setup Timetable</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="done">Done</string>
    <string name="to">to</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_name">Subject Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendance_percentage_nthis_week">Attendance Percentage\nthis week</string>
    <string name="lectures_today">Lectures Today</string>
    <string name="attended">Attended</string>
    <string name="not_attended">Not Attended</string>
    <string name="no_lectures_today">No Lectures Today,\nEnjoy your Day!</string>
    <string name="attendance_percentage">100%</string>
</resources>