<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddLectureFragment">

    <EditText
        android:id="@+id/subjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_name"
        android:inputType="textCapWords"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/subjectCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/subject_code"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/startTime"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/start_time"
            android:inputType="none"
            android:textAlignment="center"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/to"/>

        <EditText
            android:id="@+id/endTime"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:textAlignment="center"
            android:hint="@string/end_time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/addLectureBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_lecture"
            android:layout_gravity="bottom"
            android:textAllCaps="false"/>

    </LinearLayout>


</LinearLayout>